--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "http": "0.0.0"
   },
   "dependencies": {
+    "fs": "0.0.1-security",
+    "moment": "^2.22.2",
     "mysql": "^2.16.0",
     "underscore": "^1.8.3",
     "url": "^0.11.0"
