--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "fs": "0.0.1-security",
     "moment": "^2.22.2",
     "mysql": "^2.16.0",
+    "redis": "^2.8.0",
+    "redis-server": "^1.2.2",
     "underscore": "^1.8.3",
     "url": "^0.11.0"
   }
