--- a/server/package.json
+++ b/server/package.json
@@ -25,10 +25,13 @@
     "fs": "0.0.1-security",
     "moment": "^2.22.2",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "redis": "^2.8.0",
     "redis-server": "^1.2.2",
+    "sequelize": "^4.41.0",
+    "sequelize-cli": "^5.3.0",
     "underscore": "^1.8.3",
     "url": "^0.11.0"
   }
