--- a/front/angular.json
+++ b/front/angular.json
@@ -23,9 +23,15 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+//              "node_modules/jquery/dist/jquery.js",
+//              "src/js/jquery-3.2.1.slim.min.js",
+//              "node_modules/popper.js/dist/popper.min.js",
+//              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
