--- a/front/package.json
+++ b/front/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@stomp/ng2-stompjs": "^7.0.0-beta.1",
+    "bootstrap": "^3.1.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "ngx-bootstrap": "^3.1.1",
+    "popper.js": "^1.14.5",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
