--- a/front/angular.json
+++ b/front/angular.json
@@ -27,7 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+//              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/css/bootstrap4.min.css",
               "src/styles.css"
             ],
             "scripts": [
