--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@stomp/ng2-stompjs": "^7.0.0-beta.1",
     "bootstrap": "^3.1.1",
     "core-js": "^2.5.4",
@@ -33,6 +35,7 @@
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
