front: profile & auth

--- a/front/package.json
+++ b/front/package.json
@@ -26,7 +26,9 @@
     "bootstrap": "^3.1.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "ngx-bootstrap": "^3.1.1",
+    "ngx-moment": "^3.2.0",
     "popper.js": "^1.14.5",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
