--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.17.0",
     "crypto": "0.0.3",
     "express": "^4.16.3",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "websocket": "^1.0.28"
   },
   "dependencies": {
     "connect-redis": "^3.4.0",
