--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^3.1.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "js-sha256": "^0.9.0",
     "moment": "^2.22.2",
     "ngx-bootstrap": "^3.1.1",
     "ngx-moment": "^3.2.0",
