--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "sequelize": "^4.41.0",
     "sequelize-cli": "^5.3.0",
     "underscore": "^1.8.3",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "ws": "^6.1.2"
   }
 }
