--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@ng-select/ng-select": "^2.13.0",
     "@stomp/ng2-stompjs": "^7.0.0-beta.1",
     "bootstrap": "^3.1.1",
     "core-js": "^2.5.4",
