--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
     "url": "https://github.com/bear-wolf/REST-Node-Angular.git"
   },
   "devDependencies": {
+    "@types/ws": "^6.0.1",
     "body-parser": "^1.17.0",
     "crypto": "0.0.3",
     "express": "^4.16.3",
     "http": "0.0.0",
+    "typescript": "^3.2.2",
     "websocket": "^1.0.28"
   },
   "dependencies": {
